--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 blinker==1.8.2
 click==8.1.8
+dnspython==2.6.1
+email-validator==2.3.0
 flask==3.0.3
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
 greenlet==3.1.1
+idna==3.11
 importlib-metadata==8.5.0
 itsdangerous==2.2.0
 jinja2==3.1.6
